<resources>
    <string name="app_name">Arsenal</string>
    <string name="EPL">Premier League</string>
    <string name="laliga">LaLiga</string>
    <string name="bundesliga">BundesLiga</string>
    <string name="seriea">SerieA</string>
    <string name="ligue1">Ligue1</string>
    <string name="wc">World Cup</string>
    <string name="cl">Champions League</string>
    <string name="arsenal">Arsenal</string>
    <string name="debate">The Debate</string>
    <string name="header">My Header Title</string>
</resources>
